--- a/.github/工作流/hao4k.yml
+++ b/.github/工作流/hao4k.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Hao4k auto sign in
       env:
-        HAO4K_USERNAME: ${{ secrets.HAO4K_USERNAME }}
-        HAO4K_PASSWORD: ${{ secrets.HAO4K_PASSWORD }}
-        SERVERCHAN_SCKEY: ${{ secrets.SERVERCHAN_SCKEY }}
+        HAO4K_USERNAME: ${{ libin9309 }}
+        HAO4K_PASSWORD: ${{ e@us93ysDAChb2R }}
+        SERVERCHAN_SCKEY: ${{ SCT36067T7oAp1tV3UjJyTvAwk0mMSwGf }}
       run: python signin.py
